// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapshotPodExport config 1`] = `
Array [
  Object {
    "default": "snapshots",
    "description": "where will output be stored",
    "key": "dest",
    "type": "string",
  },
  Object {
    "default": ".git",
    "description": "what files will be ignored during snapshot",
    "key": "ignore",
    "type": "string",
  },
]
`;

exports[`SnapshotPodExport empty ignore 1`] = `
Array [
  "vault",
]
`;

exports[`SnapshotPodExport empty ignore 2`] = `
Array [
  ".git",
  "assets",
  "foo.ch1.md",
  "foo.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`SnapshotPodExport ignore foo 1`] = `
Array [
  "vault",
]
`;

exports[`SnapshotPodExport ignore foo 2`] = `
Array [
  ".git",
  "assets",
  "root.md",
  "root.schema.yml",
]
`;

exports[`SnapshotPodExport with custom 1`] = `
Array [
  "vault",
]
`;

exports[`SnapshotPodExport with custom 2`] = `
Array [
  "assets",
  "foo.ch1.md",
  "foo.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`SnapshotPodImport basic 1`] = `
Array [
  ".git",
  "assets",
  "foo.ch1.md",
  "foo.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`SnapshotPodImport don't write git 1`] = `
Array [
  "assets",
  "foo.ch1.md",
  "foo.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;
